# wildhack

./: .env  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.demo.yml  docker-compose.override.yml  docker-compose.yml  seed_fura_1.json  seed_fura_4.json  seed_gazel_1.json  seed_gazel_4.json  train_1day.parquet
infra/grafana/dashboards/: transport.json
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  001_initial_schema.py  002_order_vehicle_mix.py
services/api/app/: config.py  database.py  main.py  metrics.py  scheduler.py
services/api/app/demo/: generate_data.py  runner.py  seed_vehicles.py
services/api/app/models/: __init__.py  actuals.py  raw_events.py  route_forecast.py  route_metadata.py  transport_order.py  vehicle_state.py  warehouse_config.py  warehouse_forecast.py
services/api/app/routers/: analytics.py  config.py  forecasts.py  network.py  orders.py  upload.py  vehicles.py
services/api/app/services/: draft_reviewer.py  feature_store.py  horizon_decomposer.py  metrics_collector.py  optimizer.py  transport_planner.py  vehicle_tracker.py
services/frontend/: Dockerfile  index.html  package.json
services/inference/: Dockerfile  pyproject.toml
services/inference/app/: feature_engineering.py  main.py  model_registry.py  predict.py  schemas.py  train.py
services/inference/models/: blend_weights.json  catboost_v1.pkl  catboost_v2.pkl  confidence_curve.json  ridge.pkl
(+14 files in other folders)
