[project]
name = "api-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "apscheduler",
    "redis",
    "aiohttp",
    "pandas",
    "pyarrow",
    "numpy",
    "pydantic",
    "pydantic-settings",
    "prometheus-fastapi-instrumentator",
    "python-json-logger",
    "mlflow",
    "httpx",
]
