[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "apscheduler",
    "redis",
    "aiohttp",
    "pandas",
    "numpy",
    "pyarrow",
    "pydantic",
    "python-multipart",
    "python-json-logger",
    "httpx",
]
