[project]
name = "inference-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "catboost",
    "scikit-learn",
    "pandas",
    "numpy",
    "polars",
    "pyarrow",
    "prometheus-fastapi-instrumentator",
    "python-json-logger",
]
